Pushing code which creates table results for first set of rules

--- a/Ekstraklasa.ipynb
+++ b/Ekstraklasa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 575,
    "id": "6e45c3f4-b0bf-4e59-b1ee-f0454039dc72",
    "metadata": {
     "tags": []
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 576,
    "id": "6268a614-da96-44a5-8de8-4b03c5a74031",
    "metadata": {
     "scrolled": true,
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 577,
    "id": "5a31fb79-d327-4c6a-9f0b-1575a200fb67",
    "metadata": {
     "tags": []
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 578,
    "id": "3ede9425",
    "metadata": {
     "tags": []
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 579,
    "id": "e6aaf926",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 580,
    "id": "17e9e21f-6040-4faf-b06f-ef7cf98e56e3",
    "metadata": {
     "tags": []
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 581,
    "id": "35835fd7-9c01-450d-ab9a-939d428e4f5d",
    "metadata": {
     "tags": []
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 582,
    "id": "06a0f67d-4dd9-4026-a05e-cc221f8a3706",
    "metadata": {
     "tags": []
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 583,
    "id": "a61ab541-2b5a-432d-b137-d14aae62a092",
    "metadata": {
     "tags": []
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 584,
    "id": "c40f100c-d0be-49d1-b828-0a115a62b5dd",
    "metadata": {
     "tags": []
@@ -251,13 +251,12 @@
     "        points_home.append(POINTS_DRAW)\n",
     "        points_away.append(POINTS_DRAW)\n",
     "out_data[\"Points_home\"]=points_home\n",
-    "out_data[\"Points_away\"]=points_away\n",
-    "print(out_data)          "
+    "out_data[\"Points_away\"]=points_away       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 585,
    "id": "1525b176-f603-4b07-acbe-b22689e1d9f3",
    "metadata": {
     "tags": []
@@ -274,13 +273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 586,
    "id": "6e90118e",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "\n",
     "\n",
     "for i in range(0,len(out_data[\"Home_team\"])):    \n",
     "    p=out_data.iloc[i][\"Points_home\"]\n",
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 587,
    "id": "5ecfcc82-9556-430a-a96c-367589daec41",
    "metadata": {
     "tags": []
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 588,
    "id": "c47736a2-ae3f-4e6f-bac7-80cf3db74aac",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 589,
    "id": "97ead2d8",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 590,
    "id": "9177017c",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
+   "execution_count": 591,
    "id": "91b77cc4",
    "metadata": {},
    "outputs": [],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": 592,
    "id": "79139aea",
    "metadata": {},
    "outputs": [],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 564,
+   "execution_count": 593,
    "id": "481e496c",
    "metadata": {},
    "outputs": [],
@@ -495,18 +495,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 569,
+   "execution_count": 594,
    "id": "d5a9ef67",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 17, 18, 19, 20]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for team_name in team:\n",
     "    modified_rows=(out_data[out_data[\"Away_team\"].str.contains(team_name) | out_data[\"Home_team\"].str.contains(team_name)])\n",
@@ -524,9 +516,173 @@
     "                break    \n",
     "            else:\n",
     "                i=i+4\n",
+    "    for i in range(0,modified_rows.shape[0]):\n",
+    "        if modified_rows.iat[i,0]==team_name and i in indexes:\n",
+    "            modified_rows.iat[i,14]=1\n",
+    "        elif modified_rows.iat[i,3]==team_name and i in indexes:\n",
+    "            modified_rows.iat[i,15]=1               \n",
+    "    out_data.update(modified_rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 595,
+   "id": "c6b7c806",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_data=out_data.assign(Final_accumulated_home_points=None)\n",
+    "out_data=out_data.assign(Final_accumulated_away_points=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 602,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0,out_data.shape[0]):\n",
+    "    if out_data.iat[i,15]==1:\n",
+    "        out_data.iat[i,16]=out_data.iat[i,5]\n",
+    "    if out_data.iat[i,14]==1:\n",
+    "        out_data.iat[i,17]=out_data.iat[i,6]\n",
+    "    if out_data.iat[i,15]!=1:\n",
+    "        if out_data.iat[i,5]==0 and out_data.iat[i,11]>0:\n",
+    "            out_data.iat[i,16]=out_data.iat[i,5]\n",
+    "        else:\n",
+    "            out_data.iat[i,16]=out_data.iat[i,5]+out_data.iat[i,11]\n",
+    "    if out_data.iat[i,16]!=1:      \n",
+    "        if out_data.iat[i,6]==0 and out_data.iat[i,10]>0:\n",
+    "            out_data.iat[i,17]=out_data.iat[i,6]\n",
+    "        else:\n",
+    "            out_data.iat[i,17]=out_data.iat[i,6]+out_data.iat[i,10]     \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 609,
+   "id": "7a416e4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    Team_name  Points\n",
+      "6         Raków Częstochowa     43.25\n",
+      "11           Legia Warszawa     43.00\n",
+      "4            Pogoń Szczecin     34.75\n",
+      "3               Lech Poznań     28.75\n",
+      "7               Wisła Płock     28.25\n",
+      "9                  Cracovia     27.25\n",
+      "1     Jagiellonia Białystok     25.75\n",
+      "13            Piast Gliwice     25.00\n",
+      "2             Korona Kielce     24.75\n",
+      "0             Górnik Zabrze     24.50\n",
+      "14              Stal Mielec     22.50\n",
+      "16             Warta Poznań     22.00\n",
+      "15            Śląsk Wrocław     21.00\n",
+      "5            Radomiak Radom     19.50\n",
+      "10            Lechia Gdańsk     19.25\n",
+      "17              Widzew Łódź     17.50\n",
+      "12            Miedź Legnica     15.50\n",
+      "8            Zagłębie Lubin     15.00\n",
+      "                    Team_name  Points\n",
+      "0             Górnik Zabrze        48\n",
+      "1     Jagiellonia Białystok        41\n",
+      "2             Korona Kielce        41\n",
+      "3               Lech Poznań        61\n",
+      "4            Pogoń Szczecin        60\n",
+      "5            Radomiak Radom        44\n",
+      "6         Raków Częstochowa        75\n",
+      "7               Wisła Płock        37\n",
+      "8            Zagłębie Lubin        45\n",
+      "9                  Cracovia        46\n",
+      "10            Lechia Gdańsk        30\n",
+      "11           Legia Warszawa        66\n",
+      "12            Miedź Legnica        23\n",
+      "13            Piast Gliwice        53\n",
+      "14              Stal Mielec        43\n",
+      "15            Śląsk Wrocław        38\n",
+      "16             Warta Poznań        45\n",
+      "17              Widzew Łódź        41\n"
+     ]
+    }
+   ],
+   "source": [
+    "table2={\"Team_name\":team,\n",
+    "      \"Points\":points}\n",
+    "table2=pd.DataFrame(table2)\n",
     "\n",
-    "\n",
-    "print(indexes)"
+    "for i in range(0,out_data.shape[0]):    \n",
+    "    p=out_data.iloc[i][\"Final_accumulated_home_points\"]\n",
+    "    t=out_data.iloc[i][\"Home_team\"]\n",
+    "    for j in range(0,len(table2['Team_name'])):\n",
+    "        if table2.iloc[j]['Team_name'] == t:\n",
+    "            table2.iat[j,1]=table2.iat[j,1]+p       \n",
+    "    p=out_data.iloc[i][\"Points_away\"]\n",
+    "    t=out_data.iloc[i][\"Final_accumulated_away_points\"]\n",
+    "    for j in range(0,len(table2['Team_name'])):\n",
+    "        if table2.iloc[j]['Team_name'] == t:\n",
+    "            table2.iat[j,1]=table2.iat[j,1]+p \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 610,
+   "id": "32b11ae4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    Team_name  Points\n",
+      "6         Raków Częstochowa     43.25\n",
+      "11           Legia Warszawa     43.00\n",
+      "4            Pogoń Szczecin     34.75\n",
+      "3               Lech Poznań     28.75\n",
+      "7               Wisła Płock     28.25\n",
+      "9                  Cracovia     27.25\n",
+      "1     Jagiellonia Białystok     25.75\n",
+      "13            Piast Gliwice     25.00\n",
+      "2             Korona Kielce     24.75\n",
+      "0             Górnik Zabrze     24.50\n",
+      "14              Stal Mielec     22.50\n",
+      "16             Warta Poznań     22.00\n",
+      "15            Śląsk Wrocław     21.00\n",
+      "5            Radomiak Radom     19.50\n",
+      "10            Lechia Gdańsk     19.25\n",
+      "17              Widzew Łódź     17.50\n",
+      "12            Miedź Legnica     15.50\n",
+      "8            Zagłębie Lubin     15.00\n",
+      "                    Team_name  Points\n",
+      "6         Raków Częstochowa        75\n",
+      "11           Legia Warszawa        66\n",
+      "3               Lech Poznań        61\n",
+      "4            Pogoń Szczecin        60\n",
+      "13            Piast Gliwice        53\n",
+      "0             Górnik Zabrze        48\n",
+      "9                  Cracovia        46\n",
+      "8            Zagłębie Lubin        45\n",
+      "16             Warta Poznań        45\n",
+      "5            Radomiak Radom        44\n",
+      "14              Stal Mielec        43\n",
+      "1     Jagiellonia Białystok        41\n",
+      "2             Korona Kielce        41\n",
+      "17              Widzew Łódź        41\n",
+      "15            Śląsk Wrocław        38\n",
+      "7               Wisła Płock        37\n",
+      "10            Lechia Gdańsk        30\n",
+      "12            Miedź Legnica        23\n"
+     ]
+    }
+   ],
+   "source": [
+    "table2=table2.sort_values(by=[\"Points\"],ascending=False)\n",
+    "print(table2)\n",
+    "Table=Table.sort_values(by=[\"Points\"],ascending=False)\n",
+    "print(Table)"
    ]
   }
  ],
