Fixed bug which caused not adding points from away games for all teams

--- a/Ekstraklasa.ipynb
+++ b/Ekstraklasa.ipynb
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 611,
    "id": "32b11ae4",
    "metadata": {},
    "outputs": [
@@ -683,6 +683,18 @@
     "print(table2)\n",
     "Table=Table.sort_values(by=[\"Points\"],ascending=False)\n",
     "print(Table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 613,
+   "id": "d4b383f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVE_FINAL_DATA_FRAME_TO_CSV=False\n",
+    "if SAVE_FINAL_DATA_FRAME_TO_CSV:\n",
+    "    out_data.to_csv(\"Ekstraklasa_2022-23.csv\")"
    ]
   }
  ],
