--- a/Ekstraklasa.ipynb
+++ b/Ekstraklasa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 575,
+   "execution_count": 79,
    "id": "6e45c3f4-b0bf-4e59-b1ee-f0454039dc72",
    "metadata": {
     "tags": []
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 576,
+   "execution_count": 80,
    "id": "6268a614-da96-44a5-8de8-4b03c5a74031",
    "metadata": {
     "scrolled": true,
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 577,
+   "execution_count": 81,
    "id": "5a31fb79-d327-4c6a-9f0b-1575a200fb67",
    "metadata": {
     "tags": []
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 578,
+   "execution_count": 82,
    "id": "3ede9425",
    "metadata": {
     "tags": []
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 579,
+   "execution_count": 83,
    "id": "e6aaf926",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
+   "execution_count": 84,
    "id": "17e9e21f-6040-4faf-b06f-ef7cf98e56e3",
    "metadata": {
     "tags": []
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 85,
    "id": "35835fd7-9c01-450d-ab9a-939d428e4f5d",
    "metadata": {
     "tags": []
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 86,
    "id": "06a0f67d-4dd9-4026-a05e-cc221f8a3706",
    "metadata": {
     "tags": []
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 583,
+   "execution_count": 87,
    "id": "a61ab541-2b5a-432d-b137-d14aae62a092",
    "metadata": {
     "tags": []
@@ -197,46 +197,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 584,
+   "execution_count": 88,
    "id": "c40f100c-d0be-49d1-b828-0a115a62b5dd",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                     Home_team  Home_score  Away_score           Away_team  \\\n",
-      "0              Górnik Zabrze             0           2          Cracovia     \n",
-      "1      Jagiellonia Białystok             2           0     Piast Gliwice     \n",
-      "2              Korona Kielce             1           1    Legia Warszawa     \n",
-      "3                Lech Poznań             0           2       Stal Mielec     \n",
-      "4             Pogoń Szczecin             2           1       Widzew Łódź     \n",
-      "..                         ...         ...         ...                 ...   \n",
-      "301            Piast Gliwice             3           0     Lechia Gdańsk     \n",
-      "302           Pogoń Szczecin             4           0    Radomiak Radom     \n",
-      "303        Raków Częstochowa             1           1    Zagłębie Lubin     \n",
-      "304              Stal Mielec             1           0      Warta Poznań     \n",
-      "305              Widzew Łódź             0           3     Korona Kielce     \n",
-      "\n",
-      "          date  Points_home  Points_away  \n",
-      "0   2021-07-18          0.0          3.0  \n",
-      "1   2021-07-16          3.0          0.0  \n",
-      "2   2021-07-16          1.0          1.0  \n",
-      "3   2021-07-16          0.0          3.0  \n",
-      "4   2021-07-17          3.0          0.0  \n",
-      "..         ...          ...          ...  \n",
-      "301 2022-05-27          3.0          0.0  \n",
-      "302 2022-05-27          3.0          0.0  \n",
-      "303 2022-05-27          1.0          1.0  \n",
-      "304 2022-05-27          3.0          0.0  \n",
-      "305 2022-05-27          0.0          3.0  \n",
-      "\n",
-      "[306 rows x 7 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "points_home=[]\n",
     "points_away=[]\n",
@@ -256,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 89,
    "id": "1525b176-f603-4b07-acbe-b22689e1d9f3",
    "metadata": {
     "tags": []
@@ -273,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 90,
    "id": "6e90118e",
    "metadata": {
     "tags": []
@@ -299,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 91,
    "id": "5ecfcc82-9556-430a-a96c-367589daec41",
    "metadata": {
     "tags": []
@@ -346,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": 92,
    "id": "c47736a2-ae3f-4e6f-bac7-80cf3db74aac",
    "metadata": {},
    "outputs": [],
@@ -369,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 93,
    "id": "97ead2d8",
    "metadata": {},
    "outputs": [],
@@ -419,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 94,
    "id": "9177017c",
    "metadata": {},
    "outputs": [],
@@ -436,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 95,
    "id": "91b77cc4",
    "metadata": {},
    "outputs": [],
@@ -458,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 96,
    "id": "79139aea",
    "metadata": {},
    "outputs": [],
@@ -475,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 97,
    "id": "481e496c",
    "metadata": {},
    "outputs": [],
@@ -495,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 98,
    "id": "d5a9ef67",
    "metadata": {},
    "outputs": [],
@@ -526,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 99,
    "id": "c6b7c806",
    "metadata": {},
    "outputs": [],
@@ -537,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,64 +517,19 @@
     "            out_data.iat[i,16]=out_data.iat[i,5]\n",
     "        else:\n",
     "            out_data.iat[i,16]=out_data.iat[i,5]+out_data.iat[i,11]\n",
-    "    if out_data.iat[i,16]!=1:      \n",
+    "    if out_data.iat[i,14]!=1:      \n",
     "        if out_data.iat[i,6]==0 and out_data.iat[i,10]>0:\n",
     "            out_data.iat[i,17]=out_data.iat[i,6]\n",
     "        else:\n",
-    "            out_data.iat[i,17]=out_data.iat[i,6]+out_data.iat[i,10]     \n"
+    "            out_data.iat[i,17]=out_data.iat[i,6]+out_data.iat[i,10]   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 113,
    "id": "7a416e4b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                    Team_name  Points\n",
-      "6         Raków Częstochowa     43.25\n",
-      "11           Legia Warszawa     43.00\n",
-      "4            Pogoń Szczecin     34.75\n",
-      "3               Lech Poznań     28.75\n",
-      "7               Wisła Płock     28.25\n",
-      "9                  Cracovia     27.25\n",
-      "1     Jagiellonia Białystok     25.75\n",
-      "13            Piast Gliwice     25.00\n",
-      "2             Korona Kielce     24.75\n",
-      "0             Górnik Zabrze     24.50\n",
-      "14              Stal Mielec     22.50\n",
-      "16             Warta Poznań     22.00\n",
-      "15            Śląsk Wrocław     21.00\n",
-      "5            Radomiak Radom     19.50\n",
-      "10            Lechia Gdańsk     19.25\n",
-      "17              Widzew Łódź     17.50\n",
-      "12            Miedź Legnica     15.50\n",
-      "8            Zagłębie Lubin     15.00\n",
-      "                    Team_name  Points\n",
-      "0             Górnik Zabrze        48\n",
-      "1     Jagiellonia Białystok        41\n",
-      "2             Korona Kielce        41\n",
-      "3               Lech Poznań        61\n",
-      "4            Pogoń Szczecin        60\n",
-      "5            Radomiak Radom        44\n",
-      "6         Raków Częstochowa        75\n",
-      "7               Wisła Płock        37\n",
-      "8            Zagłębie Lubin        45\n",
-      "9                  Cracovia        46\n",
-      "10            Lechia Gdańsk        30\n",
-      "11           Legia Warszawa        66\n",
-      "12            Miedź Legnica        23\n",
-      "13            Piast Gliwice        53\n",
-      "14              Stal Mielec        43\n",
-      "15            Śląsk Wrocław        38\n",
-      "16             Warta Poznań        45\n",
-      "17              Widzew Łódź        41\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "table2={\"Team_name\":team,\n",
     "      \"Points\":points}\n",
@@ -617,19 +538,19 @@
     "for i in range(0,out_data.shape[0]):    \n",
     "    p=out_data.iloc[i][\"Final_accumulated_home_points\"]\n",
     "    t=out_data.iloc[i][\"Home_team\"]\n",
-    "    for j in range(0,len(table2['Team_name'])):\n",
+    "    for j in range(0,table2.shape[0]):\n",
     "        if table2.iloc[j]['Team_name'] == t:\n",
     "            table2.iat[j,1]=table2.iat[j,1]+p       \n",
-    "    p=out_data.iloc[i][\"Points_away\"]\n",
-    "    t=out_data.iloc[i][\"Final_accumulated_away_points\"]\n",
-    "    for j in range(0,len(table2['Team_name'])):\n",
+    "    p=out_data.iloc[i][\"Final_accumulated_away_points\"]\n",
+    "    t=out_data.iloc[i][\"Away_team\"]\n",
+    "    for j in range(0,table2.shape[0]):\n",
     "        if table2.iloc[j]['Team_name'] == t:\n",
     "            table2.iat[j,1]=table2.iat[j,1]+p \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 114,
    "id": "32b11ae4",
    "metadata": {},
    "outputs": [
@@ -638,24 +559,24 @@
      "output_type": "stream",
      "text": [
       "                    Team_name  Points\n",
-      "6         Raków Częstochowa     43.25\n",
-      "11           Legia Warszawa     43.00\n",
-      "4            Pogoń Szczecin     34.75\n",
-      "3               Lech Poznań     28.75\n",
-      "7               Wisła Płock     28.25\n",
-      "9                  Cracovia     27.25\n",
-      "1     Jagiellonia Białystok     25.75\n",
-      "13            Piast Gliwice     25.00\n",
-      "2             Korona Kielce     24.75\n",
-      "0             Górnik Zabrze     24.50\n",
-      "14              Stal Mielec     22.50\n",
-      "16             Warta Poznań     22.00\n",
-      "15            Śląsk Wrocław     21.00\n",
-      "5            Radomiak Radom     19.50\n",
-      "10            Lechia Gdańsk     19.25\n",
-      "17              Widzew Łódź     17.50\n",
-      "12            Miedź Legnica     15.50\n",
-      "8            Zagłębie Lubin     15.00\n",
+      "6         Raków Częstochowa     71.50\n",
+      "11           Legia Warszawa     66.25\n",
+      "4            Pogoń Szczecin     62.00\n",
+      "3               Lech Poznań     60.25\n",
+      "13            Piast Gliwice     48.50\n",
+      "0             Górnik Zabrze     47.75\n",
+      "8            Zagłębie Lubin     44.25\n",
+      "5            Radomiak Radom     43.00\n",
+      "16             Warta Poznań     42.75\n",
+      "9                  Cracovia     42.00\n",
+      "14              Stal Mielec     38.75\n",
+      "2             Korona Kielce     38.75\n",
+      "17              Widzew Łódź     37.00\n",
+      "1     Jagiellonia Białystok     36.00\n",
+      "7               Wisła Płock     36.00\n",
+      "15            Śląsk Wrocław     34.25\n",
+      "10            Lechia Gdańsk     29.50\n",
+      "12            Miedź Legnica     21.25\n",
       "                    Team_name  Points\n",
       "6         Raków Częstochowa        75\n",
       "11           Legia Warszawa        66\n",
@@ -682,19 +603,21 @@
     "table2=table2.sort_values(by=[\"Points\"],ascending=False)\n",
     "print(table2)\n",
     "Table=Table.sort_values(by=[\"Points\"],ascending=False)\n",
-    "print(Table)"
+    "print(Table)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 103,
    "id": "d4b383f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "SAVE_FINAL_DATA_FRAME_TO_CSV=False\n",
     "if SAVE_FINAL_DATA_FRAME_TO_CSV:\n",
-    "    out_data.to_csv(\"Ekstraklasa_2022-23.csv\")"
+    "    out_data.to_csv(\"Ekstraklasa_2022-23.csv\")\n",
+    "\n"
    ]
   }
  ],
