Added Accumulated Rival Points stat

--- a/Ekstraklasa.ipynb
+++ b/Ekstraklasa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 34,
    "id": "6e45c3f4-b0bf-4e59-b1ee-f0454039dc72",
    "metadata": {
     "tags": []
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 35,
    "id": "6268a614-da96-44a5-8de8-4b03c5a74031",
    "metadata": {
     "scrolled": true,
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 36,
    "id": "5a31fb79-d327-4c6a-9f0b-1575a200fb67",
    "metadata": {
     "tags": []
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 37,
    "id": "3ede9425",
    "metadata": {
     "tags": []
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 38,
    "id": "e6aaf926",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 39,
    "id": "17e9e21f-6040-4faf-b06f-ef7cf98e56e3",
    "metadata": {
     "tags": []
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 40,
    "id": "35835fd7-9c01-450d-ab9a-939d428e4f5d",
    "metadata": {
     "tags": []
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 41,
    "id": "06a0f67d-4dd9-4026-a05e-cc221f8a3706",
    "metadata": {
     "tags": []
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 42,
    "id": "a61ab541-2b5a-432d-b137-d14aae62a092",
    "metadata": {
     "tags": []
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 43,
    "id": "c40f100c-d0be-49d1-b828-0a115a62b5dd",
    "metadata": {
     "tags": []
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 44,
    "id": "1525b176-f603-4b07-acbe-b22689e1d9f3",
    "metadata": {
     "tags": []
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 45,
    "id": "6e90118e",
    "metadata": {
     "tags": []
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 46,
    "id": "5ecfcc82-9556-430a-a96c-367589daec41",
    "metadata": {
     "tags": []
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 47,
    "id": "c47736a2-ae3f-4e6f-bac7-80cf3db74aac",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 48,
    "id": "97ead2d8",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 49,
    "id": "9177017c",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 50,
    "id": "91b77cc4",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 51,
    "id": "79139aea",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 52,
    "id": "481e496c",
    "metadata": {},
    "outputs": [],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 53,
    "id": "d5a9ef67",
    "metadata": {},
    "outputs": [],
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 54,
    "id": "c6b7c806",
    "metadata": {},
    "outputs": [],
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 56,
    "id": "7a416e4b",
    "metadata": {},
    "outputs": [],
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 65,
    "id": "32b11ae4",
    "metadata": {},
    "outputs": [
@@ -577,39 +577,48 @@
       "15            Śląsk Wrocław     34.25\n",
       "10            Lechia Gdańsk     29.50\n",
       "12            Miedź Legnica     21.25\n",
-      "                    Team_name  Points\n",
-      "6         Raków Częstochowa        75\n",
-      "11           Legia Warszawa        66\n",
-      "3               Lech Poznań        61\n",
-      "4            Pogoń Szczecin        60\n",
-      "13            Piast Gliwice        53\n",
-      "0             Górnik Zabrze        48\n",
-      "9                  Cracovia        46\n",
-      "8            Zagłębie Lubin        45\n",
-      "16             Warta Poznań        45\n",
-      "5            Radomiak Radom        44\n",
-      "14              Stal Mielec        43\n",
-      "1     Jagiellonia Białystok        41\n",
-      "2             Korona Kielce        41\n",
-      "17              Widzew Łódź        41\n",
-      "15            Śląsk Wrocław        38\n",
-      "7               Wisła Płock        37\n",
-      "10            Lechia Gdańsk        30\n",
-      "12            Miedź Legnica        23\n"
+      "                    Team_name  Points  Accumulated  Differance\n",
+      "1     Jagiellonia Białystok        41        36.00        5.00\n",
+      "13            Piast Gliwice        53        48.50        4.50\n",
+      "14              Stal Mielec        43        38.75        4.25\n",
+      "9                  Cracovia        46        42.00        4.00\n",
+      "17              Widzew Łódź        41        37.00        4.00\n",
+      "15            Śląsk Wrocław        38        34.25        3.75\n",
+      "6         Raków Częstochowa        75        71.50        3.50\n",
+      "2             Korona Kielce        41        38.75        2.25\n",
+      "16             Warta Poznań        45        42.75        2.25\n",
+      "12            Miedź Legnica        23        21.25        1.75\n",
+      "7               Wisła Płock        37        36.00        1.00\n",
+      "5            Radomiak Radom        44        43.00        1.00\n",
+      "8            Zagłębie Lubin        45        44.25        0.75\n",
+      "3               Lech Poznań        61        60.25        0.75\n",
+      "10            Lechia Gdańsk        30        29.50        0.50\n",
+      "0             Górnik Zabrze        48        47.75        0.25\n",
+      "11           Legia Warszawa        66        66.25       -0.25\n",
+      "4            Pogoń Szczecin        60        62.00       -2.00\n"
      ]
     }
    ],
    "source": [
     "table2=table2.sort_values(by=[\"Points\"],ascending=False)\n",
-    "print(table2)\n",
     "Table=Table.sort_values(by=[\"Points\"],ascending=False)\n",
-    "print(Table)\n",
-    "\n"
+    "print(table2)\n",
+    "table2=table2.sort_values(by=[\"Team_name\"],ascending=False)\n",
+    "Table=Table.sort_values(by=[\"Team_name\"],ascending=False)\n",
+    "\n",
+    "\n",
+    "diffrance_table=Table\n",
+    "diffrance_table[\"Accumulated\"]=table2[\"Points\"]\n",
+    "\n",
+    "diffrance_table[\"Differance\"]=diffrance_table[\"Points\"]-diffrance_table[\"Accumulated\"]\n",
+    "diffrance_table=diffrance_table.sort_values(by=[\"Points\"],ascending=False)\n",
+    "\n",
+    "diffrance_table=diffrance_table.sort_values(by=[\"Differance\"],ascending=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 58,
    "id": "d4b383f4",
    "metadata": {},
    "outputs": [],
@@ -617,7 +626,63 @@
     "SAVE_FINAL_DATA_FRAME_TO_CSV=False\n",
     "if SAVE_FINAL_DATA_FRAME_TO_CSV:\n",
     "    out_data.to_csv(\"Ekstraklasa_2022-23.csv\")\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "c19e6897",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    Team_name  Accumulated Rival Points\n",
+      "4            Pogoń Szczecin                        3.50\n",
+      "10            Lechia Gdańsk                        2.75\n",
+      "5            Radomiak Radom                        2.50\n",
+      "0             Górnik Zabrze                        2.00\n",
+      "12            Miedź Legnica                        2.00\n",
+      "8            Zagłębie Lubin                        1.75\n",
+      "16             Warta Poznań                        1.00\n",
+      "2             Korona Kielce                        0.75\n",
+      "3               Lech Poznań                        0.75\n",
+      "11           Legia Warszawa                        0.50\n",
+      "7               Wisła Płock                        0.50\n",
+      "17              Widzew Łódź                       -1.00\n",
+      "14              Stal Mielec                       -1.50\n",
+      "15            Śląsk Wrocław                       -1.75\n",
+      "13            Piast Gliwice                       -2.75\n",
+      "1     Jagiellonia Białystok                       -3.00\n",
+      "9                  Cracovia                       -3.25\n",
+      "6         Raków Częstochowa                       -3.50\n"
+     ]
+    }
+   ],
+   "source": [
+    "table3={\"Team_name\":team,\n",
+    "      \"Accumulated Rival Points\":points}\n",
+    "table3=pd.DataFrame(table3)\n",
+    "\n",
+    "for i in range(0,out_data.shape[0]):    \n",
+    "    p=out_data.iloc[i][\"Accumulated_away_points\"]\n",
+    "    t=out_data.iloc[i][\"Home_team\"]\n",
+    "    for j in range(0,table3.shape[0]):\n",
+    "        if table3.iloc[j]['Team_name'] == t:\n",
+    "            table3.iat[j,1]=table3.iat[j,1]+p       \n",
+    "    p=out_data.iloc[i][\"Accumulated_home_points\"]\n",
+    "    t=out_data.iloc[i][\"Away_team\"]\n",
+    "    for j in range(0,table3.shape[0]):\n",
+    "        if table3.iloc[j]['Team_name'] == t:\n",
+    "            table3.iat[j,1]=table3.iat[j,1]+p \n",
+    "\n",
+    "\n",
+    "\n",
+    "table3=table3.sort_values(by=[\"Accumulated Rival Points\"],ascending=False)         \n",
+    "print(table3)"
    ]
   }
  ],
