Update typo in Ekstraklasa.ipynb

--- a/Ekstraklasa.ipynb
+++ b/Ekstraklasa.ipynb
@@ -577,7 +577,7 @@
       "15            Śląsk Wrocław     34.25\n",
       "10            Lechia Gdańsk     29.50\n",
       "12            Miedź Legnica     21.25\n",
-      "                    Team_name  Points  Accumulated  Differance\n",
+      "                    Team_name  Points  Accumulated  Difference\n",
       "1     Jagiellonia Białystok        41        36.00        5.00\n",
       "13            Piast Gliwice        53        48.50        4.50\n",
       "14              Stal Mielec        43        38.75        4.25\n",
@@ -610,10 +610,10 @@
     "diffrance_table=Table\n",
     "diffrance_table[\"Accumulated\"]=table2[\"Points\"]\n",
     "\n",
-    "diffrance_table[\"Differance\"]=diffrance_table[\"Points\"]-diffrance_table[\"Accumulated\"]\n",
+    "diffrance_table[\"Difference\"]=diffrance_table[\"Points\"]-diffrance_table[\"Accumulated\"]\n",
     "diffrance_table=diffrance_table.sort_values(by=[\"Points\"],ascending=False)\n",
     "\n",
-    "diffrance_table=diffrance_table.sort_values(by=[\"Differance\"],ascending=False)\n"
+    "diffrance_table=diffrance_table.sort_values(by=[\"Difference\"],ascending=False)\n"
    ]
   },
   {
